cluster/apps/warrior/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: warrior
  labels:
    goldilocks.fairwinds.com/enabled: "true"
