cluster/apps/warrior/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
  namespace: warrior
spec:
  selector:
    matchLabels:
      app: warrior
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: warrior
    spec:
      containers:
        - name: warrior
          image: archiveteam/warrior-dockerfile
          ports:
            - containerPort: 8001
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - mountPath: /data/data
              name: warrior
      restartPolicy: Always
      volumes:
        - name: warrior
          persistentVolumeClaim:
            claimName: warrior
