cluster/apps/warrior/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: warrior
  namespace: warrior
spec:
  ports:
    - name: http
      port: 8001
  selector:
    app: warrior
